Remove group details tabs. Even up spacing. Fix bad text colors

--- a/src/sentry/static/sentry/less/sentry-simple.less
+++ b/src/sentry/static/sentry/less/sentry-simple.less
@@ -66,7 +66,7 @@
   font-size: 48px !important;
   position: absolute;
   left: -60px;
-  top: 1px;
+  top: -1px;
 }
 
 .btn-sm {
@@ -91,8 +91,8 @@ body {
 header {
   background: #465262;
   color: #fff;
-  padding: 16px 0;
-  margin: 0 0 22px;
+  padding: 20px 0;
+  margin: 0 0 30px;
   a {
     color: #fff;
     &:hover {
@@ -237,7 +237,7 @@ header {
 }
 
 .project-nav {
-  margin: 0 0 20px;
+  margin: -10px 0 20px;
 }
 
 .search {
@@ -420,7 +420,7 @@ header {
 }
 
 .group-detail {
-  margin-bottom: 24px;
+  margin-bottom: 30px;
   h3 {
     font-size: 22px;
     letter-spacing: -0.25px;
@@ -460,8 +460,9 @@ header {
 }
 
 .seen-by {
-  color: #949ea4;
-  float: right;
+  h5 {
+    margin: 0 0 14px;
+  }
   ul {
     .list-unstyled;
     li:first-child {
@@ -558,7 +559,7 @@ header {
 
     time {
       float: right;
-      color: #999
+      color: #949ea4;
     }
 
     .stacktrace {
@@ -579,7 +580,7 @@ header {
           width: 40px;
           margin-right: 5px;
           display: inline-block;
-          color: #999;
+          color: #949ea4;
           text-align: right;
         }
 
@@ -589,7 +590,7 @@ header {
 
         .function {
           float: right;
-          color: #999;
+          color: #949ea4;
         }
 
         &:first-child {
